# zero2prod-rs

./: .env  .envrc  Cargo.toml  Dockerfile  LICENSE  flake.nix
.config/: config.toml
.github/workflows/: general.yaml
.sqlx/: query-9a0c5ef001b5c7ad9ac3338e0d0d3c5ca178e182be995c6a49f2327e0cf9130d.json
configuration/: base.yaml  local.yaml
migrations/: 20250323201734_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
