[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Cedrik Hoffmann <dev@choffmann.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
claims = "0.7"
validator = "0.20"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.reqwest]
version = "0.12"
features = ["json", "rustls-tls"]
default-features = false 

[dev-dependencies]
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8"
